
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Enhanced striptags output filter to take a parameter of allowed tags
- Make sure $paths and $options are passed to OnCacheUpdate
- Added compression/concat references to login and browser tpls
- Fixed build.local.xml and build.xml scripts
- Added compress_css system setting for compressed CSS for releases, moved over modx-theme.css to templates css/ dir. Don't use compress_css without first running _build/build.local.xml Ant task.
- Cleaned up leftover PHP4 function definitions, unescaped SQL code, added proper accessor methods for private vars, other old code 
- Fixed bug with modLexiconLanguage::clearCache
- [#MODX-1738] Fixed issue with FC TV rules not working as expected on Resource Update
- Fixed bug where plugin event properties were getting merged if more than one plugin was associated with the event
- Added loading mask to editing panels to prevent accidental editing before data is loaded
- Added sanity check for OnRichTextBrowserInit event processing
- Added fix for RTE loading in Resource panel, should fix most RTE saving bugs
- Added collapsibility to Document panel
- Added 'concat_js' system setting that will concat all the common JS files into one single file
- Adjusted lang.js.php to properly use ETag header to cache lang js
- Added css rule to prevent hidden iframes from being shown
- Fixed bug where Resource Groups were not editable on Create Resource
- Added sanity check for packages with missing provider
- Added "Updates Available" column to packages grid, auto-checks provider for updates
- [#MODX-1732] Added duplicate language ability to language grid
- [#MODX-1741] Fixed possible bug with radio/cb tv labels