@@ -4,6 +4,8 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added $resource to properties passed to OnDocFormDelete in resource/delete processor
+- Updated to xPDO 2.0.0 r417 ([#XPDO-40] Fixed getCount to work when passing a criteria with a class alias set)
 - Enhanced striptags output filter to take a parameter of allowed tags
 - Make sure $paths and $options are passed to OnCacheUpdate
 - Added compression/concat references to login and browser tpls
